--- a/index.html
+++ b/index.html
@@ -446,13 +446,13 @@
         <div class="contact-form" data-aos="fade-up">
             <form action="https://formspree.io/f/xeokyppa" method="post">
             <div class="mb-3">
-                <input type="text" class="form-control" id="name" placeholder="Your Name" required>
+                <input type="text" class="form-control" id="name" name="name" placeholder="Your Name" required>
             </div>
             <div class="mb-3">
-                <input type="email" class="form-control" id="email" placeholder="Your Email" required>
+                <input type="email" class="form-control" id="email" name="email" placeholder="Your Email" required>
             </div>
             <div class="mb-3">
-                <textarea class="form-control" id="message" rows="5" placeholder="Your Message" required></textarea>
+                <textarea class="form-control" id="message" rows="5" name="message" placeholder="Your Message" required></textarea>
             </div>
             <button class="btn btn-primary" id="sendMessage">Send Message</button>
         </div>
