commited contact form

--- a/index.html
+++ b/index.html
@@ -444,7 +444,7 @@
     <section id="contact" class="container">
         <h2 class="section-title">Contact Me</h2>
         <div class="contact-form" data-aos="fade-up">
-            <form action="https://formspree.io/f/xeokyppa" method="post">
+            <!-- <form action="https://formspree.io/f/xeokyppa" method="post">
             <div class="mb-3">
                 <input type="text" class="form-control" id="name" name="name" placeholder="Your Name" required>
             </div>
@@ -460,7 +460,22 @@
             <p><i class="fas fa-phone me-2"></i> +91 8157034721</p>
             <p><i class="fas fa-envelope me-2"></i> pritam2chatterjee@gmail.com</p>
         </div>
-        </form>
+        </form> -->
+        <form
+  action="https://formspree.io/f/xeokyppa"
+  method="POST"
+>
+  <label>
+    Your email:
+    <input type="email" name="email">
+  </label>
+  <label>
+    Your message:
+    <textarea name="message"></textarea>
+  </label>
+  <!-- your other form fields go here -->
+  <button type="submit">Send</button>
+</form>
     </section>
 
     <footer>
