--- a/index.html
+++ b/index.html
@@ -31,10 +31,12 @@
             box-shadow: 0 4px 12px rgba(0, 0, 0, 0.2);
             padding: 1rem 0;
         }
-#experience{display: flex;
-flex-direction: column;
-align-items: flex-start;
-justify-content: flex-start;}
+        #experience{
+            display: flex;
+        flex-direction: column;
+        align-items: flex-start;
+        justify-content: flex-start;
+    }
         .navbar-brand {
             font-size: 2rem;
             font-weight: 700;
