--- a/index.html
+++ b/index.html
@@ -450,23 +450,7 @@
     <section id="contact" class="container">
         <h2 class="section-title">Contact Me</h2>
         <div class="contact-form" data-aos="fade-up">
-            <!-- <form action="https://formspree.io/f/xeokyppa" method="post">
-            <div class="mb-3">
-                <input type="text" class="form-control" id="name" name="name" placeholder="Your Name" required>
-            </div>
-            <div class="mb-3">
-                <input type="email" class="form-control" id="email" name="email" placeholder="Your Email" required>
-            </div>
-            <div class="mb-3">
-                <textarea class="form-control" id="message" rows="5" name="message" placeholder="Your Message" required></textarea>
-            </div>
-            <button class="btn btn-primary" id="sendMessage">Send Message</button>
-        </div>
-        <div class="text-center mt-4">
-            <p><i class="fas fa-phone me-2"></i> +91 8157034721</p>
-            <p><i class="fas fa-envelope me-2"></i> pritam2chatterjee@gmail.com</p>
-        </div>
-        </form> -->
+       
         <form action="https://formspree.io/f/xeokyppa" method="POST">
   <div class="mb-3">
     <label for="email" class="form-label">Your Email:</label>
@@ -481,14 +465,13 @@
     <textarea class="form-control" id="message" name="message" rows="5" required></textarea>
   </div>
 
-  <!-- Optional: Add Name Field -->
-  
+
 
   <button type="submit" class="btn btn-primary">Send</button>
 
   <!-- Contact Info -->
   <div class="text-center mt-4">
-    <p><i class="fas fa-phone me-2"></i> +91 8157034721</p>
+    <p><i class="fas fa-phone me-2"></i></p>
     <p><i class="fas fa-envelope me-2"></i> pritam2chatterjee@gmail.com</p>
   </div>
 </form>
