--- a/index.html
+++ b/index.html
@@ -353,7 +353,7 @@
             <p><strong>Multiple Locations in India</strong> (01/2025 - Present)</p>
             <ul>
                 <li>Delivered corporate training on Java (Core, Advanced, Spring, Hibernate, JPA, Spring Boot, REST, Microservices, Security), Web Technologies (HTML5, CSS3, JS, Angular, React), Databases (MySQL, MongoDB, Oracle), MuleSoft (MCD Fundamentals Mule 4, On-Premises Deployment, DataWeave, Access Management), and Salesforce (Admin, Apex, Async Apex, Integration, Aura, LWC).</li>
-                <li>Clients: Wipro, MuleSoft and Salesforce clients, various engineering colleges.</li>
+                <li>Clients: Wipro, MuleSoft and Salesforce clients, multiple engineering colleges.</li>
             </ul>
         </div>
 
