--- a/index.html
+++ b/index.html
@@ -471,7 +471,7 @@
 
   <!-- Contact Info -->
   <div class="text-center mt-4">
-    <p><i class="fas fa-envelope me-2"></i>Or Contact Me @ pritam2chatterjee@gmail.com</p>
+    <p><i class="fas fa-envelope me-2"></i><a href="mailto:pritam2chatterjee@gmail.com"> Email Me </a></p>
   </div>
 </form>
 
