--- a/index.html
+++ b/index.html
@@ -467,7 +467,7 @@
 
 
 
-  <center><button type="submit" class="btn btn-primary">Send</button></center>
+  <button type="submit" class="btn btn-primary">Send</button>
 
   <!-- Contact Info -->
   <div class="text-center mt-4">
