--- a/index.html
+++ b/index.html
@@ -675,8 +675,11 @@
     <section id="about" class="container">
         <div class="text-center" data-aos="fade-up">
             <h2 class="section-title">About Me</h2>
-            <p class="lead">Dynamic and engaging Senior Technical Trainer with over 12 years of experience in India and overseas. I specialize in designing and delivering training programs on Java Full Stack, MuleSoft, Salesforce, and Databases, fostering a positive learning environment. Dedicated to helping individuals and teams acquire practical skills to enhance proficiency and productivity, with excellent cross-cultural communication and adaptation skills, supporting global operations.</p>
-        </div>
+            <p class="lead">
+            Seasoned Senior Technical Trainer with Over 12 Years of Global Experience Specializing in Java Full Stack, MuleSoft, Salesforce, 
+            and Databases, Delivering Engaging Training Programs to Empower Teams with Practical Skills and Drive Productivity Across Diverse,
+             Cross-Cultural Environments    
+            </div>
     </section>
 
     <section id="skills" class="container parallax" style="background-image: url('https://source.unsplash.com/random/1920x1080?code');">
