--- a/index.html
+++ b/index.html
@@ -34,6 +34,8 @@
             --experience-color-7: #bae6fd;
             --experience-color-8: #cffafe;
             --experience-color-9: #ecfeff;
+            --about-gradient-start: #bae6fd;
+            --about-gradient-end: #e0f2fe;
         }
 
         body {
@@ -237,23 +239,45 @@
         }
 
         #about {
-            background: #ffffff;
-            border-radius: 20px;
-            box-shadow: 0 10px 30px rgba(0, 0, 0, 0.1);
+            background: linear-gradient(135deg, var(--about-gradient-start), var(--about-gradient-end));
+            border-radius: 15px;
+            box-shadow: 0 8px 25px rgba(0, 0, 0, 0.15);
+            padding: 30px;
+            max-width: 700px;
+            margin: 0 auto;
             transform: perspective(1000px);
-            transition: transform 0.5s ease, box-shadow 0.5s ease;
+            transition: transform 0.5s ease, box-shadow 0.5s ease, background 0.3s ease;
+            position: relative;
+            overflow: hidden;
+        }
+
+        #about::before {
+            content: '';
+            position: absolute;
+            top: 0;
+            left: 0;
+            width: 100%;
+            height: 100%;
+            background: radial-gradient(circle, rgba(255, 255, 255, 0.2) 0%, transparent 70%);
+            opacity: 0;
+            transition: opacity 0.3s ease;
+        }
+
+        #about:hover::before {
+            opacity: 1;
         }
 
         #about:hover {
             transform: perspective(1000px) rotateY(5deg) translateY(-10px);
-            box-shadow: 0 15px 40px rgba(0, 0, 0, 0.2);
+            box-shadow: 0 12px 35px rgba(0, 0, 0, 0.2);
         }
 
         #about p {
-            font-size: 1.2rem;
-            color: #4b5563;
+            font-size: 1.1rem;
+            color: #1f2937;
             position: relative;
             animation: slideInLeft 1s ease-out;
+            line-height: 1.8;
         }
 
         .skill-card {
@@ -632,6 +656,11 @@
                 padding: 20px;
                 margin-bottom: 20px;
             }
+
+            #about {
+                padding: 20px;
+                max-width: 100%;
+            }
         }
     </style>
 </head>
@@ -654,6 +683,7 @@
                         <li class="nav-item"><a class="nav-link" href="#skills">Skills</a></li>
                         <li class="nav-item"><a class="nav-link" href="#experience">Experience</a></li>
                         <li class="nav-item"><a class="nav-link" href="#certifications">Certifications</a></li>
+                        <li class="nav-item"><a class="nav-link" href="tutorials.html">Tutorials</a></li>
                         <li class="nav-item"><a class="nav-link" href="#achievements">Achievements</a></li>
                         <li class="nav-item"><a class="nav-link" href="#contact">Contact</a></li>
                     </ul>
@@ -675,11 +705,8 @@
     <section id="about" class="container">
         <div class="text-center" data-aos="fade-up">
             <h2 class="section-title">About Me</h2>
-            <p class="lead">
-            Seasoned Senior Technical Trainer with Over 12 Years of Global Experience Specializing in Java Full Stack, MuleSoft, Salesforce, 
-            and Databases, Delivering Engaging Training Programs to Empower Teams with Practical Skills and Drive Productivity Across Diverse,
-             Cross-Cultural Environments    
-            </div>
+            <p class="lead">Seasoned Senior Technical Trainer with over 12 years of global experience specializing in Java Full Stack, MuleSoft, Salesforce, and Databases, delivering engaging training programs to empower teams with practical skills and drive productivity across diverse, cross-cultural environments.</p>
+        </div>
     </section>
 
     <section id="skills" class="container parallax" style="background-image: url('https://source.unsplash.com/random/1920x1080?code');">
@@ -828,32 +855,33 @@
     <section id="contact" class="container">
         <h2 class="section-title">Contact Me</h2>
         <div class="contact-form" data-aos="fade-up">
-       
-        <form action="https://formspree.io/f/xeokyppa" method="POST">
-  <div class="mb-3">
-    <label for="email" class="form-label">Your Email:</label>
-    <input type="email" class="form-control" id="email" name="email" required>
-  </div>
-<div class="mb-3">
-    <label for="name" class="form-label">Your Name:</label>
-    <input type="text" class="form-control" id="name" name="name">
-  </div>
-  <div class="mb-3">
-    <label for="message" class="form-label">Your Message:</label>
-    <textarea class="form-control" id="message" name="message" rows="5" required></textarea>
-  </div>
-
-
-
-  <button type="submit" class="btn btn-primary">Send</button>
-
-  <!-- Contact Info -->
-  <div class="text-center mt-4">
-    <p><i class="fas fa-phone me-2"></i></p>
-    <p><i class="fas fa-envelope me-2"></i> pritam2chatterjee@gmail.com</p>
-  </div>
-</form>
-
+            <form action="https://formspree.io/f/xeokyppa" method="POST" id="contactForm">
+                <div class="mb-3">
+                    <label for="name" class="form-label">Your Name:</label>
+                    <input type="text" class="form-control" id="name" name="name" required aria-describedby="nameHelp">
+                    <div id="nameHelp" class="form-text sr-only">Enter your full name.</div>
+                </div>
+                <div class="mb-3">
+                    <label for="email" class="form-label">Your Email:</label>
+                    <input type="email" class="form-control" id="email" name="email" required aria-describedby="emailHelp">
+                    <div id="emailHelp" class="form-text sr-only">Enter a valid email address.</div>
+                </div>
+                <div class="mb-3">
+                    <label for="message" class="form-label">Your Message:</label>
+                    <textarea class="form-control" id="message" name="message" rows="5" required aria-describedby="messageHelp"></textarea>
+                    <div id="messageHelp" class="form-text sr-only">Enter your message or inquiry.</div>
+                </div>
+                <div class="d-flex justify-content-center">
+                    <button type="submit" class="btn btn-primary btn-lg px-5 shadow-lg" id="sendMessage" data-aos="zoom-in" data-aos-delay="200">
+                        <i class="fas fa-paper-plane me-2"></i> Send
+                    </button>
+                </div>
+                <p class="mt-3 text-center">
+                    <i class="fas fa-envelope me-2"></i>
+                    <a href="mailto:pritam2chatterjee@gmail.com" class="text-decoration-none" style="color: var(--primary);">Email Me</a>
+                </p>
+            </form>
+        </div>
     </section>
 
     <footer>
