--- a/tutorials.html
+++ b/tutorials.html
@@ -500,6 +500,7 @@
             <h2>Java Full Stack | Salesforce Apex & LWC</h2>
             <p class="typed-text"><span id="typed"></span></p>
             <a href="interview.html" class="btn btn-primary mt-4">Java Interview Questions</a>
+            <a href="tutorials.html#tutorials" class="btn btn-primary mt-4">Sample Tutorials</a>
         </div>
     </section>
 
