--- a/index.html
+++ b/index.html
@@ -684,7 +684,7 @@
                         <li class="nav-item"><a class="nav-link" href="index.html#experience">Experience</a></li>
                         <li class="nav-item"><a class="nav-link" href="index.html#certifications">Certifications</a></li>
                         <li class="nav-item"><a class="nav-link" href="tutorials.html">Tutorials</a></li>
-                        <li class="nav-item"><a class="nav-link" href="index.html#achievements">Achievements</a></li>
+                        <li class="nav-item"><a class="nav-link" href="index.html#projects">Projects</a></li>
                         <li class="nav-item"><a class="nav-link" href="index.html#contact">Contact</a></li>
                     </ul>
                 </div>
@@ -763,24 +763,41 @@
             <h4>IT Trainer - Freelancer</h4>
             <p><strong>Multiple Locations in India</strong> (01/2025 - Present)</p>
             <ul>
-                <li>Delivered corporate training on Java (Core, Advanced, Spring, Hibernate, JPA, Spring Boot, REST, Microservices, Security), Web Technologies (HTML5, CSS3, JS, Angular, React), Databases (MySQL, MongoDB, Oracle), MuleSoft (MCD Fundamentals Mule 4, On-Premises Deployment, DataWeave, Access Management), and Salesforce (Admin, Apex, Async Apex, Integration, Aura, LWC).</li>
-                <li>Clients: Wipro, MuleSoft and Salesforce clients, multiple engineering colleges.</li>
+                Conduct enterprise-level training programs on various technologies, including:
+<li> Java: Core, Advanced, Spring, Hibernate, JPA, Spring Boot, REST, Microservices, and Security </li>
+<li> Data Structures and Algorithms</li>
+<li> C/C++</li>
+<li> Web Technologies: HTML5, CSS3, JavaScript, Angular, and React</li>
+<li> Databases: MySQL, MongoDB, and Oracle</li>
+<li> DevOps – Git, GitHub, Jenkins, Docker</li>
+<li> MuleSoft: MCD Fundamentals Mule 4, On-Premises Deployment, DataWeave, and Access Management</li>
+<li> Salesforce: Admin, Apex, Async Apex, Integration, Aura, and Lightning Web Components (LWC)</li>
+<li> Delivered training to diverse clients, including Wipro, MuleSoft and Salesforce clients, and multiple engineering colleges.</li>
+                <li>Developed and managed training content, including hands-on labs and projects.</li>
+                <li>Conducted technical interviews and assessments for engineering students.</li>
             </ul>
         </div>
         <div class="experience-item" data-aos="fade-up" data-aos-delay="200">
             <h4>Technical Training Senior Specialist - NTT DATA</h4>
             <p><strong>Gurgaon, India</strong> (10/2020 - 11/2024)</p>
             <ul>
-                <li>Delivered training on Salesforce (Configuration & Customization), MuleSoft (MCD Fundamentals - Mule 4, On-Premises Deployment, DataWeave, Access Management), Java, DevOps, Testing, and Databases.</li>
-                <li>Trained trainers in MuleSoft and Salesforce.</li>
+                Provided training on various technologies to internal teams and clients, including:
+<li> Salesforce: Configuration and Customization - Apex, Async Apex, Integration, Aura, and Lightning Web Components (LWC)</li>
+<li> MuleSoft: MCD Fundamentals (Mule 4), On-Premises Deployment, DataWeave, and Access Management </li>
+<li> Databases - MySQL and MongoDB </li>
+<li> Java, DevOps, and Testing </li>
+
             </ul>
         </div>
         <div class="experience-item" data-aos="fade-up" data-aos-delay="300">
             <h4>IT Trainer - NIIT China (Ningxia University)</h4>
             <p><strong>Yinchuan, China</strong> (08/2018 - 10/2020)</p>
             <ul>
-                <li>Delivered training on programming languages and databases.</li>
-                <li>Developed and managed training content for Java Full Stack Development.</li>
+            <li>Delivered training on Java Full Stack, including Core Java, Advanced Java, Servlet, JSP, Hibernate, Spring, Spring Boot, REST</li>
+	<li>Developed and managed training contents.</li>
+                <li>Conducted hands-on labs and projects to enhance practical skills.</li>
+                <li>Managed academic web development projects in Java</li>
+
             </ul>
         </div>
         <div class="experience-item" data-aos="fade-up" data-aos-delay="400">
@@ -842,13 +859,14 @@
         </ul>
     </section>
 
-    <section id="achievements" class="container">
-        <h2 class="section-title">Achievements</h2>
+    <section id="projects" class="container">
+        <h2 class="section-title">Projects</h2>
         <ul class="certifications-list list-unstyled" data-aos="fade-up">
-            <li><i class="fas fa-star me-2"></i> Star Performer Award, NTT DATA</li>
-            <li><i class="fas fa-star me-2"></i> MVP Award, NTT DATA</li>
-            <li><i class="fas fa-star me-2"></i> Best Trainer Award, CMS Info Systems</li>
-            <li><i class="fas fa-star me-2"></i> Multiple other rewards across various workplaces</li>
+            <li><i class="fas fa-star me-2"></i> Employee Management System</li>
+            <li><i class="fas fa-star me-2"></i> Student Portal</li>
+            <li><i class="fas fa-star me-2"></i> JavaScript Calculator</li>
+            <li><i class="fas fa-star me-2"></i> Banking System</li>
+            <li><i class="fas fa-star me-2"></i> E-commerce Website</li>
         </ul>
     </section>
 
