--- a/index.html
+++ b/index.html
@@ -698,7 +698,7 @@
             <h1>Senior Technical Trainer</h1>
             <h2>Java Full Stack | MuleSoft | Salesforce | Databases</h2>
             <p class="typed-text"><span id="typed"></span></p>
-            <a href="#contact" class="btn btn-primary mt-4">Get in Touch</a>
+            <a href="index.html#contact" class="btn btn-primary mt-4">Get in Touch</a>
         </div>
     </section>
 
