--- a/index.html
+++ b/index.html
@@ -680,7 +680,7 @@
                     <ul class="navbar-nav ms-auto">
                         <li class="nav-item"><a class="nav-link active" href="index.html#hero">Home</a></li>
                         <li class="nav-item"><a class="nav-link" href="index.html#about" >About</a></li>
-                        <li class="nav-item"><a class="nav-link" href="index.html#skills">Skills</a></li>
+                        <li class="nav-item"><a class="nav-link" href="index.html#skills">Services</a></li>
                         <li class="nav-item"><a class="nav-link" href="index.html#experience">Experience</a></li>
                         <li class="nav-item"><a class="nav-link" href="index.html#certifications">Certifications</a></li>
                         <li class="nav-item"><a class="nav-link" href="tutorials.html">Tutorials</a></li>
@@ -710,7 +710,7 @@
     </section>
 
     <section id="skills" class="container parallax" style="background-image: url('https://source.unsplash.com/random/1920x1080?code');">
-        <h2 class="section-title">My Skills</h2>
+        <h2 class="section-title">Deliver Training on </h2>
         <div class="row g-4">
             <div class="col-md-4" data-aos="fade-up" data-aos-delay="100">
                 <div class="skill-card">
