--- a/index.html
+++ b/index.html
@@ -710,7 +710,7 @@
     </section>
 
     <section id="skills" class="container parallax" style="background-image: url('https://source.unsplash.com/random/1920x1080?code');">
-        <h2 class="section-title">Deliver Training on </h2>
+        <h2 class="section-title">Provide Training on </h2>
         <div class="row g-4">
             <div class="col-md-4" data-aos="fade-up" data-aos-delay="100">
                 <div class="skill-card">
