--- a/tutorials.html
+++ b/tutorials.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Tutorials by Pritam Chatterjee on Java Full Stack and Salesforce Apex & Lightning Web Components (LWC).">
     <title>Tutorials | Pritam Chatterjee</title>
-    <link rel="icon" href="java.png" type="image/png">
+    <link rel="icon" href="Pritam.png" type="image/png">
     <!-- Bootstrap CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <!-- Google Fonts -->
@@ -473,7 +473,13 @@
     <header>
         <nav class="navbar navbar-expand-lg">
             <div class="container">
-                <a class="navbar-brand" href="index.html">Pritam Chatterjee</a>
+                <a class="navbar-brand" href="#"><img src="Pritam.png" alt="Pritam Chatterjee" width="100" height="100"/>
+                <img src="oracle.jfif" alt="Pritam Chatterjee" width="100" height="100"/>
+                <img src="pd1.png" alt="Pritam Chatterjee" width="100" height="100"/>
+                <img src="salesforceadmin.png" alt="Pritam Chatterjee" width="100" height="100"/>
+                <img src="mcd.jfif" alt="Pritam Chatterjee" width="120" height="100"/>
+                <img src="databricks.png" alt="Pritam Chatterjee" width="100" height="100"/>
+                </a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
                 </button>
@@ -501,6 +507,7 @@
             <p class="typed-text"><span id="typed"></span></p>
             <a href="interview.html" class="btn btn-primary mt-4">Java Interview Questions</a>
             <a href="tutorials.html#tutorials" class="btn btn-primary mt-4">Sample Tutorials</a>
+            <a href="https://docs.google.com/document/d/1w421Hrvlzv2uh5utT6-l9luYCA5BCdTl/edit?usp=sharing&ouid=116377665156966910272&rtpof=true&sd=true" class="btn btn-primary mt-4">Problem Solving with Data Structures & Algorithms</a>
         </div>
     </section>
 
