--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Portfolio of Pritam Chatterjee, Senior Technical Trainer specializing in Java Full Stack, MuleSoft, Salesforce, and Databases.">
-    <title>Senior Technical Trainer Portfolio</title>
-    <link rel="icon" href="java.png" type="image/png">
+    <title>Pritam - Senior Technical Trainer - Portfolio</title>
+    <link rel="icon" href="Pritam.png" type="image/png">
     <!-- Bootstrap CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <!-- Google Fonts -->
@@ -672,7 +672,13 @@
     <header>
         <nav class="navbar navbar-expand-lg">
             <div class="container">
-                <a class="navbar-brand" href="#">Pritam Chatterjee</a>
+                <a class="navbar-brand" href="#"><img src="Pritam.png" alt="Pritam Chatterjee" width="100" height="100"/>
+                <img src="oracle.jfif" alt="Pritam Chatterjee" width="100" height="100"/>
+                <img src="pd1.png" alt="Pritam Chatterjee" width="100" height="100"/>
+                <img src="salesforceadmin.png" alt="Pritam Chatterjee" width="100" height="100"/>
+                <img src="mcd.jfif" alt="Pritam Chatterjee" width="120" height="100"/>
+                <img src="databricks.png" alt="Pritam Chatterjee" width="100" height="100"/>
+                </a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
                 </button>
