--- a/index.html
+++ b/index.html
@@ -702,7 +702,7 @@
         <div id="particles-js"></div>
         <div class="container text-center" data-aos="zoom-in">
             <h1>Senior Technical Trainer</h1>
-            <h2>Java Full Stack | MuleSoft | Salesforce | Databases</h2>
+            <h2>Java Full Stack | DSA | MuleSoft | Salesforce | Databases</h2>
             <p class="typed-text"><span id="typed"></span></p>
             <a href="index.html#contact" class="btn btn-primary mt-4">Get in Touch</a>
         </div>
@@ -711,7 +711,7 @@
     <section id="about" class="container">
         <div class="text-center" data-aos="fade-up">
             <h2 class="section-title">About Me</h2>
-            <p class="lead">Seasoned Senior Technical Trainer with over 12 years of global experience specializing in Java Full Stack, MuleSoft, Salesforce, and Databases, delivering engaging training programs to empower teams with practical skills and drive productivity across diverse, cross-cultural environments.</p>
+            <p class="lead">Seasoned Senior Technical Trainer with over 13 years of global experience specialized in Java Full Stack, DSA, Problem Solving, MuleSoft, Salesforce, and Databases, delivering engaging training programs to empower teams with practical skills and drive productivity across diverse, cross-cultural environments.</p>
         </div>
     </section>
 
@@ -721,8 +721,8 @@
             <div class="col-md-4" data-aos="fade-up" data-aos-delay="100">
                 <div class="skill-card">
                     <i class="fab fa-java"></i>
-                    <h3>Java Full Stack Development</h3>
-                    <p>Expertise in Core Java, Advanced Java, Servlet, JSP, Hibernate, Spring, Spring Boot, REST, Microservices, Security, Web Services, JUnit.</p>
+                    <h3>Java Full Stack Development & DSA</h3>
+                    <p>Expertise in Core Java, DSA Problem Solving, Advanced Java, Servlet, JSP, Hibernate, Spring, Spring Boot, REST, Microservices, Security, Web Services, JUnit.</p>
                 </div>
             </div>
             <div class="col-md-4" data-aos="fade-up" data-aos-delay="200">
@@ -765,6 +765,15 @@
 
     <section id="experience" class="container">
         <h2 class="section-title">Work Experience</h2>
+        <div class="experience-item" data-aos="fade-up" data-aos-delay="100">
+            <h4>Technical Trainer - Uttaranchal University</h4>
+            <p><strong>Dehradun</strong> (09/2025 - Present)</p>
+            <ul>
+   <li>Deliver training on Java Full Stack</li>
+                <li>Deliver training on DSA & Problem Solving</li>
+                <li>Conduct technical assessments for students.</li>
+            </ul>
+        </div>
         <div class="experience-item" data-aos="fade-up" data-aos-delay="100">
             <h4>IT Trainer - Freelancer</h4>
             <p><strong>Multiple Locations in India</strong> (01/2025 - Present)</p>
